--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Whatsapp Group Invite</title>
     <meta property="og:title" content="🔞 Group 18+/Bokep/Bokep Bocil 🔞">
     <meta property="og:url" content="./">
-    <meta property="og:site_name" content="Rans ENTERTAIMENT">
+    <meta property="og:site_name" content="WhatsApp Group Invite
     <meta property="og:type" content="website">
     <meta name="copyright" content="WhatsApp Group Invite">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
